Refactored 'recentlyPlayed' and frequentlyPlayed' to be automatically created PlayLists (view/LibraryModel/LibraryModelTest)